Describe the plots

--- a/PITE-substitute-task.ipynb
+++ b/PITE-substitute-task.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -277,10 +277,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"I  don't think column 12 (blue scatters) has a significant impact on the price prediction in the linear regression model. As it is only \""
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''I  don't think column 12 (blue scatters) has a significant impact on the price prediction in the linear regression model. If at all it is only weakly linear dependant. The column data does not have any tendency towards 0/0 which the red prediction plot has by a large amount '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-69-b5373e5e0995>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-69-b5373e5e0995>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    '''''\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''For the second colum (5) I have chose, I can see a strong linear dependence of the target to the column data. The plot closely follows the scatters of that column.'''"
+   ]
   },
   {
    "cell_type": "code",
