Github, why do you break my comments?

--- a/PITE-substitute-task.ipynb
+++ b/PITE-substitute-task.ipynb
@@ -297,20 +297,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOF while scanning triple-quoted string literal (<ipython-input-69-b5373e5e0995>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-69-b5373e5e0995>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    '''''\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOF while scanning triple-quoted string literal\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'For the second colum (5) I have chosen, I can see a strong linear dependence of the target to the column data. The plot closely follows the scatters of that column.'"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "'''For the second colum (5) I have chose, I can see a strong linear dependence of the target to the column data. The plot closely follows the scatters of that column.'''"
+    "'''For the second colum (5) I have chosen, I can see a strong linear dependence of the target to the column data. The plot closely follows the scatters of that column.'''"
    ]
   },
   {
